--- a/package.json
+++ b/package.json
@@ -1,24 +1,18 @@
 {
-  "name": "front-1",
+  "name": "front-end-project",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Projeto de front-end simples",
+  "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "live-server",
+    "build": "echo \"Build step\""
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Matheusbzrr/front.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Matheusbzrr/front/issues"
-  },
-  "homepage": "https://github.com/Matheusbzrr/front#readme",
-  "description": "",
   "dependencies": {
-    "front-1": "file:",
+    "front-end-project": "file:",
     "sweetalert2": "^11.16.1"
-  }
+  },
+  "devDependencies": {
+    "live-server": "^1.2.1"
+  },
+  "license": "ISC"
 }
