--- a/vercel.json
+++ b/vercel.json
@@ -7,8 +7,12 @@
   ],
   "routes": [
     {
-      "src": "/",
-      "dest": "index.html"
+      "src": "/src/(.*)",
+      "dest": "/src/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
     }
   ]
 }
